# ChatCodex

./: .dockerignore  AGENTS.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/: copilot-instructions.md
.github/instructions/: rust.instructions.md  typescript.instructions.md
.github/workflows/: milestone-deterministic.yml
apps/chatgpt-mcp/: package-lock.json  package.json
apps/chatgpt-mcp/src/: config.test.ts  config.ts  daemon-client.ts  embedded-oidc.test.ts  embedded-oidc.ts  http-server.ts  index.ts  invariants.test.ts  mcp-server.ts  oauth.test.ts  oauth.ts  schemas.ts  tools.ts
codex-rs/: Cargo.toml
codex-rs/deterministic-core/: Cargo.toml
codex-rs/deterministic-core/src/: approval.rs  approval_policy.rs  code_search.rs  file_read.rs  git_diff.rs  git_status.rs  lib.rs  patch_apply.rs  run_annotate.rs  run_archive.rs  run_assign_owner.rs  run_finalize.rs  run_pin.rs  run_prepare.rs  run_readiness.rs  run_refresh.rs  run_reopen.rs  run_replan.rs  run_set_dependencies.rs  run_set_due_date.rs  run_set_effort.rs  run_set_priority.rs  run_snooze.rs  run_staleness.rs  run_supersede.rs  run_triage.rs  run_unarchive.rs  run_unpin.rs  run_unsnooze.rs  tests_run.rs  workspace_summary.rs
codex-rs/deterministic-daemon/: Cargo.toml
codex-rs/deterministic-daemon/src/: handlers.rs  lib.rs  main.rs  persistence.rs  router.rs
codex-rs/deterministic-protocol/: Cargo.toml
codex-rs/deterministic-protocol/src/: lib.rs  methods.rs  types.rs
deploy/chatcodex/: Dockerfile  entrypoint.sh
docs/: ARCHITECTURE.md  DEVELOPMENT.md  EXAMPLE_PROMPTS.md  FIRST_RUN_WORKFLOW.md  IMPLEMENTATION_PLAN.md  INTERNAL_RPC.md  INTERVENTION_PATTERNS.md  MANUAL_VALIDATION_WALKTHROUGH.md  MCP_TOOL_CONTRACTS.md  MVP_CHECKPOINT_REVIEW.md  MVP_EVALUATION.md  MVP_README.md  MVP_RELEASE_CHECKLIST.md  NO_HIDDEN_AGENT_INVARIANTS.md  ONBOARDING.md  OPERATOR_GUIDE.md  PROJECT_STATUS.md  RESEARCH_DECISION.md  TOOLS_OVERVIEW.md  VALIDATION_PLAN.md
scripts/: pre-merge-review.sh
