[package]
edition.workspace = true
license.workspace = true
name = "deterministic-core"
version.workspace = true

[lib]
name = "deterministic_core"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
deterministic-protocol = { path = "../deterministic-protocol" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
chrono = { workspace = true }
anyhow = { workspace = true }
walkdir = { workspace = true }
globset = { workspace = true }
regex = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
